# NieRAutomata-LodMod

./: .gitignore  .gitmodules  CMakeLists.txt  LodMod.ini  toolchain-clang-cl.cmake
Automata-LodMod/: Automata-LodMod.vcxproj  FileLimits.cpp  TextureInjection.cpp  TextureInjection.h  dllmain.cpp  pch.h
Automata-LodMod/compat/: DirectXMath.h  Psapi.h  Shlobj.h  WinBase.h  Windows.h
